--- a/src/Persistence/pom.xml
+++ b/src/Persistence/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mycompany</groupId>
-    <artifactId>Persistencia</artifactId>
+    <artifactId>Persistence</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
-        <exec.mainClass>com.mycompany.persistencia.Persistencia</exec.mainClass>
+        <exec.mainClass>com.mycompany.persistence.Persistence</exec.mainClass>
     </properties>
     <dependencies>
         <dependency>
@@ -54,8 +54,10 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <!--<groupId>mysql</groupId> -->
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
+           <!-- <artifactId>mysql-connector-java</artifactId> -->
             <version>8.0.32</version>
         </dependency>
     </dependencies>
