se agrego dependencia Domain

--- a/src/api/pom.xml
+++ b/src/api/pom.xml
@@ -23,6 +23,11 @@
             <version>${jakartaee}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Domain</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     
     <build>
