se agregaron detalles

--- a/src/api/pom.xml
+++ b/src/api/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>Domain</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Persistence</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     
     <build>
