--- a/src/aplicacion-web/src/main/webapp/WEB-INF/web.xml
+++ b/src/aplicacion-web/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,16 @@
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
    version="6.0">
+    
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error404.jsp</location>
+    </error-page>
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/error_java.jsp</location>
+    </error-page>
+    
     <session-config>
         <session-timeout>
             30
